Start to stat analysis on nicks piece

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -2265,24 +2265,76 @@
       "\n",
       "# creates new dataframes organized by test and train\n",
       "bomj_testdf = bomj_df[yr_check(bomj_df,test_yrs)]\n",
-      "bomj_traindf = bomj_df[yr_check(bomj_df,train_yrs)]"
+      "bomj_traindf = bomj_df[yr_check(bomj_df,train_yrs)]\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 54
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.naive_bayes import MultinomialNB\n",
+      "\n",
+      "\n",
+      "\n",
+      "# NOTES TO SELF: Need to filter data based on where there are nones!!\n",
+      "\n",
+      "def test_for_nones(df,column_name):\n",
+      "    result = []\n",
+      "    col = df[column_name]\n",
+      "    for item in col:\n",
+      "        check_bool = False\n",
+      "        if item != '000None':\n",
+      "            check_bool = True\n",
+      "        result.append(check_bool)\n",
+      "    return result\n",
+      "\n",
+      "\n",
+      "bomj_testdf2 = bomj_testdf[ test_for_nones(bomj_testdf,'imdbid') ] \n",
+      "bomj_testdf2 = bomj_testdf2[ test_for_nones(bomj_testdf2,'total_gross') ] \n",
+      "\n",
+      "def isolate_data(df,cols_to_include,classifier_column='oscar_winner'):\n",
+      "    X = df[cols_to_include]\n",
+      "    Y = df[classifier_column]\n",
+      "    return X, Y\n",
+      "\n",
+      "(X_test, Y_test) = isolate_data(bomj_testdf2,['total_gross','imdbid'],'oscar_winner')\n",
+      "(X_train, Y_train) = isolate_data(bomj_testdf2,['total_gross','imdbid'],'oscar_winner')\n",
+      "\n",
+      "Y_train2=[]\n",
+      "X_train2=[]\n",
+      "for num in Y_train:\n",
+      "    Y_train2.append(int(num))\n",
+      "# for a,b in X_train:\n",
+      "#     X_train2.append(in\n",
+      "\n",
+      "clf = MultinomialNB().fit(X_train, Y_train2)\n",
+      "pred_test = clf.predict(X_test)\n",
+      "print pred_test\n",
+      "#print \"Accuracy: %0.2f%%\" % (100 * clf.score(X_train, Y_train))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2008\n",
-        "2012\n",
-        "2004\n",
-        "2005\n",
-        "2006\n"
+       "ename": "TypeError",
+       "evalue": "can't multiply sequence by non-int of type 'float'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-94-a998776c3fec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultinomialNB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mpred_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mpred_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;31m#print \"Accuracy: %0.2f%%\" % (100 * clf.score(X_train, Y_train))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m//anaconda/python.app/Contents/lib/python2.7/site-packages/sklearn/naive_bayes.pyc\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0mvalues\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m         \"\"\"\n\u001b[0;32m---> 63\u001b[0;31m         \u001b[0mjll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_joint_log_likelihood\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjll\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m//anaconda/python.app/Contents/lib/python2.7/site-packages/sklearn/naive_bayes.pyc\u001b[0m in \u001b[0;36m_joint_log_likelihood\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    455\u001b[0m         \u001b[0;34m\"\"\"Calculate the posterior log probability of the samples X\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0matleast2d_or_csr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 457\u001b[0;31m         return (safe_sparse_dot(X, self.feature_log_prob_.T)\n\u001b[0m\u001b[1;32m    458\u001b[0m                 + self.class_log_prior_)\n\u001b[1;32m    459\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m//anaconda/python.app/Contents/lib/python2.7/site-packages/sklearn/utils/extmath.pyc\u001b[0m in \u001b[0;36msafe_sparse_dot\u001b[0;34m(a, b, dense_output)\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 94
     },
     {
      "cell_type": "markdown",
