added a filter for the rotten tomatoes data

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -891,7 +891,7 @@
       "'''\n",
       "\n",
       "def get_rtomatoes_movie_reviews(imdb):\n",
-      "\t#api_key = 't97y5fkhfbfu9wjhse7v8ayy'\n",
+      "\t#api_key = 't97y5fkhfbfu9wjhse7v8ayy' \n",
       "\t#api_key = '8kr5nqyrshjyp4y69w8rzzgu'\n",
       "\tapi_key = 'sdat77wpkdnuyvb9bqhz2y5v'\n",
       "\tif(len(imdb)<7):\n",
@@ -954,18 +954,7 @@
       "\t\n",
       "\td = {'critic' : critics, 'norm_score' : freshness, 'quote' : quotes, 'id' : ids, 'title' : titles, 'source' : pubs, 'overall_score' : overall_scores, 'date' : dates, 'year': years} \n",
       "\treturn pd.DataFrame(d)\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# actually call the functions and save in a file\n",
+      "\n",
       "def get_all_rtomatoes_movies(movieList):\n",
       "\tall_imdbs = alldata['imdbid']\n",
       "\timdbs = []\n",
@@ -984,14 +973,135 @@
       "\n",
       "\tfilename='./data/rotten_tomatoes_data.csv'\n",
       "\tnewDF.to_csv(filename, index=False)\n",
-      "\treturn newDF\n",
-      "   \n",
-      "#alldata = pd.read_csv('./revised_id_data.csv')     \n",
-      "#rot_tom_data = get_all_rtomatoes_movies(alldata)\t\n"
+      "\treturn newDF"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# actually call the functions and save in a file\n",
+      "\n",
+      "#alldata = pd.read_csv('./revised_id_data.csv')     \n",
+      "#rot_tom_data = get_all_rtomatoes_movies(alldata)\n",
+      "\n",
+      "#once we have the stored csv file not necessary to make the above calls, and can just do:\n",
+      "rotten_df = pd.read_csv('data/rotten_tomatoes_data.csv')\n",
+      "\n",
+      "def filter_tomatoes(dataF):\n",
+      "    for ind, each in enumerate(dataF['quote']):\n",
+      "        if(str(each) == 'nan'):\n",
+      "            dataF['quote'][ind] = 'NoReview'\n",
+      "    dataF = dataF[dataF.quote != 'NoReview']\n",
+      "    return dataF\n",
+      "\n",
+      "rotten_df = filter_tomatoes(rotten_df)\n",
+      "rotten_df.head()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>critic</th>\n",
+        "      <th>date</th>\n",
+        "      <th>id</th>\n",
+        "      <th>norm_score</th>\n",
+        "      <th>overall_score</th>\n",
+        "      <th>quote</th>\n",
+        "      <th>source</th>\n",
+        "      <th>title</th>\n",
+        "      <th>year</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td>   David Germain</td>\n",
+        "      <td> 11/19/13</td>\n",
+        "      <td> 167260</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0.94</td>\n",
+        "      <td> With The Lord of the Rings: The Return of the ...</td>\n",
+        "      <td>    Associated Press</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> Joe Morgenstern</td>\n",
+        "      <td> 11/19/13</td>\n",
+        "      <td> 167260</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0.94</td>\n",
+        "      <td> Yes, the running time is long, and yes, those ...</td>\n",
+        "      <td> Wall Street Journal</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> Andrea Gronvall</td>\n",
+        "      <td>   2/6/07</td>\n",
+        "      <td> 167260</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0.94</td>\n",
+        "      <td> Standing out amid an excellent cast is Elijah ...</td>\n",
+        "      <td>      Chicago Reader</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td>    Geoff Andrew</td>\n",
+        "      <td>   2/9/06</td>\n",
+        "      <td> 167260</td>\n",
+        "      <td> 0</td>\n",
+        "      <td> 0.94</td>\n",
+        "      <td> Some story strands are crudely abbreviated; ot...</td>\n",
+        "      <td>            Time Out</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td>   Peter Travers</td>\n",
+        "      <td>  1/15/04</td>\n",
+        "      <td> 167260</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 0.94</td>\n",
+        "      <td> Pops your eyes, excites your senses and brings...</td>\n",
+        "      <td>       Rolling Stone</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 71,
+       "text": [
+        "            critic      date      id  norm_score  overall_score                                              quote               source                                          title  year\n",
+        "0    David Germain  11/19/13  167260           1           0.94  With The Lord of the Rings: The Return of the ...     Associated Press  The Lord of the Rings: The Return of the King  2003\n",
+        "1  Joe Morgenstern  11/19/13  167260           1           0.94  Yes, the running time is long, and yes, those ...  Wall Street Journal  The Lord of the Rings: The Return of the King  2003\n",
+        "2  Andrea Gronvall    2/6/07  167260           1           0.94  Standing out amid an excellent cast is Elijah ...       Chicago Reader  The Lord of the Rings: The Return of the King  2003\n",
+        "3     Geoff Andrew    2/9/06  167260           0           0.94  Some story strands are crudely abbreviated; ot...             Time Out  The Lord of the Rings: The Return of the King  2003\n",
+        "4    Peter Travers   1/15/04  167260           1           0.94  Pops your eyes, excites your senses and brings...        Rolling Stone  The Lord of the Rings: The Return of the King  2003"
+       ]
+      }
+     ],
+     "prompt_number": 71
     },
     {
      "cell_type": "markdown",
