updated test_train_split function to be generalized function

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -109,7 +109,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -366,7 +366,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -1282,7 +1282,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -1415,7 +1415,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 13,
        "text": [
         "   rank  year                                        movie_title   imdbid   rtid studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close  oscar_winner  oscar_nom\n",
         "0     1  2003      The Lord of the Rings: The Return of the King  0167260    NaN     NL    377027325                3703         72629713                  3703    17-Dec      3-Jun             1          1\n",
@@ -1426,7 +1426,7 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -2149,12 +2149,44 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# randomly selects test years and train years\n",
-      "yrs = range(2003,2013)\n",
-      "test_yrs = random.sample(yrs, 5)\n",
-      "train_yrs = list(set(yrs)-set(test_yrs))\n",
-      "print 'Test years: ' + str(test_yrs)\n",
-      "print 'Train years: ' + str(train_yrs)"
+      "\"\"\"\n",
+      "Function\n",
+      "--------\n",
+      "split_test_train_years:\n",
+      "    randomly splits a movie dataframe by years into training and testing groups\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "df:\n",
+      "    Dataframe to be split\n",
+      "yr_lst:\n",
+      "    a list of the years on which to split\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "test_yrs, train_years:\n",
+      "    A tuple of the split dataframe\n",
+      "\"\"\"\n",
+      "\n",
+      "def split_test_train_years(df,yr_lst):\n",
+      "    test_yrs = random.sample(yr_lst, len(yr_lst)/2)\n",
+      "    train_yrs = list(set(yr_lst) - set(test_yrs))\n",
+      "    print 'Test years: ' + str(test_yrs)\n",
+      "    print 'Train years: ' + str(train_yrs)\n",
+      "    test_mask = [x in test_yrs for x in df.year]\n",
+      "    train_mask = [x in train_yrs for x in df.year]\n",
+      "    return df[test_mask], df[train_mask]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "bomj_testdf,bomj_traindf = split_test_train_years(bomj_df,range(2003,2013))"
      ],
      "language": "python",
      "metadata": {},
@@ -2163,37 +2195,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Test years: [2009, 2006, 2012, 2010, 2011]\n",
-        "Train years: [2008, 2003, 2004, 2005, 2007]\n"
+        "Test years: [2006, 2010, 2005, 2009, 2008]\n",
+        "Train years: [2012, 2003, 2004, 2011, 2007]\n"
        ]
       }
      ],
-     "prompt_number": 51
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# a function that helps to isolate years within either the test or train datasets\n",
-      "def yr_check(df,yrs):\n",
-      "    years = df.year\n",
-      "    result = []\n",
-      "    for year in years:\n",
-      "        check_bool = False\n",
-      "        for list_yr in yrs:\n",
-      "            if (int(list_yr) == year):\n",
-      "                check_bool = True\n",
-      "        result.append(check_bool)\n",
-      "    return result\n",
-      "\n",
-      "# creates new dataframes organized by test and train\n",
-      "bomj_testdf = bomj_df[yr_check(bomj_df,test_yrs)]\n",
-      "bomj_traindf = bomj_df[yr_check(bomj_df,train_yrs)]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -2254,12 +2261,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Accuracy on train data: 74.07%\n",
-        "Accuracy on test data: 84.91%\n"
+        "Accuracy on train data: 67.99%\n",
+        "Accuracy on test data: 68.55%\n"
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
